test/syntax-error.out
Parse Error: Missing token, expected SEMICOLON on line 4 at character offset 1
