test/syntax-error.ks

	void main() {
		int foo = 3
	}